# Generated by Django 6.0.3 on 2026-03-19 13:31

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='CostSimulation',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('assumptions', models.JSONField(blank=True, default=dict)),
                ('results', models.JSONField(blank=True, default=dict)),
            ],
            options={
                'ordering': ('-created_at',),
            },
        ),
        migrations.CreateModel(
            name='GeneratedReport',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('range_type', models.CharField(choices=[('daily', 'Daily'), ('weekly', 'Weekly'), ('monthly', 'Monthly'), ('annual', 'Annual'), ('custom', 'Custom')], max_length=20)),
                ('start_at', models.DateTimeField()),
                ('end_at', models.DateTimeField()),
                ('payload', models.JSONField(blank=True, default=dict)),
            ],
            options={
                'ordering': ('-created_at',),
            },
        ),
    ]
